# finances

./: .gitignore  CMakeLists.txt  README.md
categories/: .gitkeep  README.md
data/: README.md
formatted_data/: README.md
params/: README.md  params.csv
src/: CreditCard.cpp  CreditCard.h  FileFormatter.cpp  FileFormatter.h  Registry.cpp  Registry.h  Statistics.cpp  Statistics.h  main.cpp
statistics/: .gitkeep  README.md
